--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="container">
         <div class="row">
           <div class="about-img">
-            <img src="./img/developer.jpg" alt="user image" />
+            <img src="./img/developer-1.jpg" alt="user_image" />
           </div>
           <div class="about-text">
             <h1>About Me</h1>
